--- a/JSFW.VS.Extensibility2019.VariableUsingView/packages.config
+++ b/JSFW.VS.Extensibility2019.VariableUsingView/packages.config
@@ -11,7 +11,7 @@
   <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.26606" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Imaging" version="15.0.26606" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net461" />
-  <package id="Microsoft.VisualStudio.SDK.Analyzers" version="15.8.36" targetFramework="net461" />
+  <package id="Microsoft.VisualStudio.SDK.Analyzers" version="17.7.22" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.VisualStudio.SDK.EmbedInteropTypes" version="15.0.9" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Shell.15.0" version="15.0.26606" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.26606" targetFramework="net461" />
@@ -28,7 +28,8 @@
   <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.8.168" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Utilities" version="15.0.26606" targetFramework="net461" />
   <package id="Microsoft.VisualStudio.Validation" version="15.3.15" targetFramework="net461" />
-  <package id="Microsoft.VSSDK.BuildTools" version="15.1.192" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.VSSDK.BuildTools" version="17.10.2179" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.VsSDK.CompatibilityAnalyzer" version="17.10.2179" targetFramework="net472" developmentDependency="true" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
